--- a/templates/base.html
+++ b/templates/base.html
@@ -41,13 +41,19 @@
     </header>
 
     <section id="extras" class="body">
-      {% if PAGES %}
+      {% if PAGES or FEED_ALL_ATOM or FEED_ALL_RSS %}
         <div class="pages">
           <h3>other pages</h3>
           <ul>
             {% for pg in PAGES %}
               <li class="seasonal-bg-hover{% if pg == page %} bold{% endif %}"><a href="{{ SITEURL }}/{{ pg.url }}"><i class="fa fa-book fa-fw"></i> {{ pg.title }}</a></li>
             {% endfor %}
+            {% if FEED_ALL_ATOM %}
+              <li class="seasonal-bg-hover"><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate"><i class="fa fa-rss fa-fw"></i> Atom Feed</a></li>
+            {% endif %}
+            {% if FEED_ALL_RSS %}
+              <li class="seasonal-bg-hover"><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate"><i class="fa fa-rss fa-fw"></i> RSS Feed</a></li>
+            {% endif %}
           </ul>
         </div>
       {% endif %}
@@ -61,17 +67,10 @@
           </ul>
         </div><!-- /.blogroll -->
       {% endif %}
-      {% if SOCIAL or FEED_ALL_ATOM or FEED_ALL_RSS %}
+      {% if SOCIAL %}
         <div class="social">
           <h3>social</h3>
           <ul>
-            {% if FEED_ALL_ATOM %}
-              <li class="seasonal-bg-hover"><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate"><i class="fa fa-rss fa-fw"></i> atom feed</a></li>
-            {% endif %}
-            {% if FEED_ALL_RSS %}
-              <li class="seasonal-bg-hover"><a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate"><i class="fa fa-rss fa-fw"></i> rss feed</a></li>
-            {% endif %}
-
             {% for name, link in SOCIAL %}
               <li class="seasonal-bg-hover"><a href="{{ link }}">
                 {% if name|lower == 'stack overflow' %}
