--- a/static/css/github.less
+++ b/static/css/github.less
@@ -8,6 +8,7 @@
 */
 
 /* imports */
+@import "colors";
 @font-face {
   font-family: "Collegiate";
   src: url("COLLEGIA.ttf");
@@ -21,7 +22,7 @@
 }
 
 .github-fork-ribbon {
-  background-color: #F3F1E9;
+  background-color: @back-color;
   font-family: "Collegiate", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   padding: 2px 0;
@@ -36,8 +37,8 @@
 
 .github-fork-ribbon a,
 .github-fork-ribbon a:hover {
-  background-color: #F3F1E9;
-  color: rgb(17, 105, 50);
+  background-color: @back-color;
+  color: @hint-color;
   display: inline-block;
   text-decoration: none;
   width: 250px;
@@ -45,7 +46,7 @@
   /* Add "stitching" effect */
   border-width: 1px 0;
   border-style: dotted;
-  border-color: rgba(0, 114, 0, 0.7);
+  border-color: @back-color;
 }
 
 .github-fork-ribbon-wrapper {
@@ -62,7 +63,7 @@
 .gh-home,
 .gh-home a,
 .gh-home a:hover {
-  background-color: rgb(17, 105, 50);
+  background-color: @hint-color;
   border-color: rgba(234, 234, 232, 0.7);
-  color: #F3F1E9;
+  color: @back-color;
 }
