--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,3 +1,1 @@
-{% if DISQUS_SITENAME %}
-<p><a href="{{ SITEURL }}/{{ article.url }}#disqus_thread"></a></p>
-{% endif %}
+{% if DISQUS_SITENAME %}<p><a href="{{ SITEURL }}/{{ article.url }}#disqus_thread"></a></p>{% endif %}
