Adding styling for lists in articles
Fixes #3

--- a/static/css/content.less
+++ b/static/css/content.less
@@ -54,6 +54,13 @@ h1 {
 
 article {
   min-height: 250px;
+  ol {
+    list-style: decimal;
+    list-style-position: inside;
+  }
+  li {
+    margin: 10px;
+  }
 }
 
 .hentry {
